UIMA-1459 Fixed inefficient Integer conversions to Strings. Code cleanup
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/sandbox/trunk@798136 13f79535-47bb-0310-9956-ffa450edef68